@@ -238,10 +238,11 @@ CloudClient.init                    = function(){
     
     if(!document.body.scrollIntoViewIfNeeded){
         this.OLD_BROWSER = true;
-            DOM.jsload(CloudClient.LIBDIRCLIENT + 'ie.js',
-                function(){
-                    DOM.jqueryLoad( lFunc );
-                });
+        var lSrc = CloudClient.LIBDIRCLIENT + 'ie.js';
+        
+        DOM.jqueryLoad(
+            DOM.retJSLoad(lSrc, lFunc)
+        );
     }else
         lFunc();
 };
