@@ -535,7 +535,7 @@ var CloudCommander, Util, DOM, CloudFunc;
      * @param pFunc
      */
     DOM.jsload                  = function(pSrc, pFunc){
-        if(pSrc instanceof Array){
+        if( Util.isArray(pSrc) ){
             for(var i=0; i < pSrc.length; i++)
                 pSrc[i].name = 'script';
             
@@ -550,6 +550,17 @@ var CloudCommander, Util, DOM, CloudFunc;
     },
     
     /**
+     * returns jsload functions
+     */    
+    DOM.retJSLoad               = function(pSrc, pFunc){
+        var lRet = function(){
+            return DOM.jsload(pSrc, pFunc);
+        };
+        
+        return lRet;
+    },
+    
+    /**
      * Функция создаёт елемент style и записывает туда стили 
      * @param pParams_o - структура параметров, заполняеться таким
      * образом: {src: ' ',func: '', id: '', element: '', inner: ''}
@@ -559,7 +570,7 @@ var CloudCommander, Util, DOM, CloudFunc;
         pParams_o.name      = 'style';
         pParams_o.parent    = pParams_o.parent || document.head;
         
-        return DOM.anyload(pParams_o);                
+        return DOM.anyload(pParams_o);
     },
     
     /**
