@@ -77,14 +77,14 @@ var Util, DOM, $;
                 https://gist.github.com/2581101
             */
             centerIfNeeded = arguments.length === 0 ? true : !!centerIfNeeded;
-        
+            
             var parent = pElement.parentNode,
                 parentComputedStyle = window.getComputedStyle(parent, null),
                 parentBorderTopWidth = 
-                    parseInt(parentComputedStyle.getPropertyValue('border-top-width')),
+                    parseInt(parentComputedStyle.getPropertyValue('border-top-width'), 10),
                     
                 parentBorderLeftWidth =
-                    parseInt(parentComputedStyle.getPropertyValue('border-left-width')),
+                    parseInt(parentComputedStyle.getPropertyValue('border-left-width'), 10),
                     
                 overTop = pElement.offsetTop - parent.offsetTop < parent.scrollTop,
                 overBottom = 
